--- a/EverquartzAdventure.csproj
+++ b/EverquartzAdventure.csproj
@@ -14,5 +14,8 @@
     <Reference Include="CalamityMod">
       <HintPath>..\ModAssemblies\CalamityMod.dll</HintPath>
     </Reference>
+    <Reference Include="Hypnos">
+      <HintPath>..\ModAssemblies\Hypnos.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
